[package]
name = "hdl"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
anyhow = "1.0.42"
lalrpop-util = "0.19.6"
regex = "1.5.4"
string-interner = "0.12.2"
